# realWorld-DjangoRestFramework

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
accounts/: models.py  serializers.py  tests.py  urls.py  views.py
accounts/management/commands/: createUser.py
accounts/migrations/: 0001_initial.py  0002_rename_name_user_username.py
articles/: admin.py  apps.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
articles/migrations/: 0001_initial.py  0002_article_slug.py  0003_alter_article_slug_alter_article_title.py
comments/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
comments/migrations/: 0001_initial.py
config/: asgi.py  settings.py  urls.py  wsgi.py
staticfiles/: staticfiles.json
staticfiles/admin/css/: forms.671bb36e43e3.css
