[tool.poetry]
name = "real world in django rest framework"
version = "1.0.0"
description = ""
authors = ["Sean-Miningah <seanpminingah@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
djangorestframework = "^3.14.0"
djangorestframework-jwt = "^1.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
